# ChangeLog for dev-ruby/ruby_parser
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby_parser/ChangeLog,v 1.70 2015/03/19 20:14:43 mrueg Exp $

*ruby_parser-3.6.5 (19 Mar 2015)

  19 Mar 2015; Manuel Rüger <mrueg@gentoo.org> +ruby_parser-3.6.5.ebuild,
  -ruby_parser-3.6.3.ebuild:
  Version bump. Remove old.

  19 Feb 2015; Manuel Rüger <mrueg@gentoo.org> -ruby_parser-2.3.1-r1.ebuild:
  Remove masked slot 0

  03 Feb 2015; Hans de Graaff <graaff@gentoo.org> ruby_parser-3.6.4.ebuild:
  Add ruby22.

*ruby_parser-3.6.4 (17 Jan 2015)

  17 Jan 2015; Manuel Rüger <mrueg@gentoo.org> +ruby_parser-3.6.4.ebuild:
  Version bump.

  25 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -ruby_parser-3.6.1.ebuild,
  -ruby_parser-3.6.2.ebuild, ruby_parser-2.3.1-r1.ebuild,
  ruby_parser-3.1.3.ebuild, ruby_parser-3.6.3.ebuild:
  Drop jruby target. Cleanup old.

*ruby_parser-3.6.3 (30 Sep 2014)

  30 Sep 2014; Hans de Graaff <graaff@gentoo.org> +ruby_parser-3.6.3.ebuild:
  Version bump.

  05 Aug 2014; Manuel Rüger <mrueg@gentoo.org> ruby_parser-2.3.1-r1.ebuild,
  ruby_parser-3.1.3.ebuild, ruby_parser-3.6.1.ebuild, ruby_parser-3.6.2.ebuild:
  Remove trailing '.' from DESCRIPTION.

*ruby_parser-3.6.2 (01 Aug 2014)

  01 Aug 2014; Manuel Rüger <mrueg@gentoo.org> +ruby_parser-3.6.2.ebuild,
  -ruby_parser-3.4.1.ebuild, -ruby_parser-3.6.0.ebuild:
  Version bump. Cleanup old.

  18 May 2014; Hans de Graaff <graaff@gentoo.org> ruby_parser-3.6.1.ebuild:
  Add ruby21.

*ruby_parser-3.6.1 (14 May 2014)

  14 May 2014; Manuel Rüger <mrueg@gentoo.org> +ruby_parser-3.6.1.ebuild:
  Version bump.

*ruby_parser-3.6.0 (25 Apr 2014)

  25 Apr 2014; Manuel Rüger <mrueg@gentoo.org> +ruby_parser-3.6.0.ebuild:
  Version bump.

  24 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -ruby_parser-3.2.2-r1.ebuild:
  Cleanup old.

  05 Apr 2014; Manuel Rüger <mrueg@gentoo.org> ruby_parser-2.3.1-r1.ebuild,
  ruby_parser-3.1.3.ebuild, ruby_parser-3.4.1.ebuild: