@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ruby_parser-3.1.3.gem 141824 SHA256 602b23bfde88e1cdcef113fd013ebf3735b06454372b3c9b5a5c14a5b161fa34 SHA512 e7e5649966a3d5e5f29b018b53d36dd8c33b9d5c14daa695995ed153a01cae90854e7bf6a2164b6b40f17e0e52391a9653f204b74ae9cc155b4c6c55a07c9b83 WHIRLPOOL b421a7696dafcdf7dfacd11bc933010190c3d6ce47b3ddbe8c9817c1f0557d0892d6bcd5fc575236eae43c13523e0163766ad6df31f3941874053a3f6296a84a
 DIST ruby_parser-3.6.4.gem 250368 SHA256 f4ded7729953ade0779ed970d58cbbcc421a2123b193a6517f1b3c20ae2ed472 SHA512 c006893e67928ed54a8bbeb9a6ee85aad33643865f53ed318079aa54d630a9d2386539a413fed184d9d94cc9e3ddbcc81098a0d23b8f4b5222ca1a65223aab3f WHIRLPOOL 440ca0a3ad59e4959371c14dcc1113c723b61d359dce7de57abc71dddce516b09f207fa199a0bf6e41261044b6f14abb6782d60199ab8762eecf92779293e051
 DIST ruby_parser-3.6.5.gem 250368 SHA256 9254b52b8ef3a56aa0af050066c7c815027d699af5620bf26896363691f34d3d SHA512 2841db63b02cf548fa16385486bdfe6b027dab538ac9ef87a555c2ec211c3c31a3cc055539f45a102fe5644094542d2f6ee464de6045c91138b0bf9e81c5f2fa WHIRLPOOL 441abf5f703de889a9cf7049f7473865bdbd8b25d32ba1f3f621e5ccdd5014a4ee2c1702e1708a3a84db40cb6b118984f02c544c7e2e9566d67c7593a854b90d
+DIST ruby_parser-3.6.6.gem 250880 SHA256 d3a3ff8e472f85d769e848caa94938e5c4a7b5d9df75384056431bade8bd2cf5 SHA512 c28fea8970c6449a59c1fed1cb2fec3cd167d45c622a7d7de85cf22f24238cd91e3fae4c20ff0de4bd0f4c3afdfd1979e16ee73f60104bcc39469d13650be02a WHIRLPOOL fdf8abbb6eb1e2c421704effd574b5d7baa21059267fad53b1a4f9e80f46c76afe65065e7b5753769c06159a6bd8c84453b9d8d3989f91492fefb15a7b5a6a64
 EBUILD ruby_parser-3.1.3.ebuild 1103 SHA256 fd3a07d76fd42d6c448713bece15d614722650ac268d4dda2b37fb0cfbb47d8f SHA512 0cc5bb166ccdc8dd2f8fcc91d8a68ca26a407a6417e6756824758f7d0ae24917b83c4b20f6aecb4a34cba08e271a33e1bf8bc25380c00589c45bc1412d7583ad WHIRLPOOL a037a4f679c5c2471ed0037d4b44808c84f122ca0e8c50992e5d66d358d373ab6eab0a1d8c245805b68e677a17d1b6fcc425573653a75522675da69f5c4b28ed
 EBUILD ruby_parser-3.6.4.ebuild 1171 SHA256 5ee27ea413c96734fc5b8808a2b313a99d32fc7063bf7d2c8fe7f7dbcf5f42e6 SHA512 26a2b79a110892b116979373d2e3fe3c4851a24bd29992c15b0ce5fe3870f9c9332cf21362dd8b7f3fc5e90a439fd89e7a9a08426891aeddf340338c369deb10 WHIRLPOOL b2c2b490d3d4af6853120b4bbf75ac9569c42abf68f9e94b0af54f86730cda5f9ba4e294833fd4982307e1b2828b6c2b4da7c1aa6960784fa7c403bdd6b30b43
 EBUILD ruby_parser-3.6.5.ebuild 1170 SHA256 68ca29b54711dbd62a3ddadff45b73427745f218d2c1d8ea35f996c51489dc0e SHA512 2e6df8c2f3a2e40d96e12b3edf4d17af9a17294d40586538a8d851b1df1b0cde178433cacac08ac2d7a5418ca20e279d464c6e1cb93dc4d558c5bd3ab0e3dd80 WHIRLPOOL c462608f734fe8a744e5b0b159abc7ac98f70222735af2113afa5b29dab1e9fc37c74c85a8dfb4a85f229b0f00735244340ca562c5c7c39084b7427e0b01a35d
-MISC ChangeLog 9496 SHA256 01814e48b90b497f8c472772e4ecb2397c1bcf58b5e13701bd193a50e5aaa2c2 SHA512 d7595b166262170aeb8ca9497aa032386ac0d8950b1d3ac47606bede388e49715cfec5426badf3793d531a8cca6450089c2e89a3452ee47d2330c06b81f4cca5 WHIRLPOOL 9b52c70cd585f28191f25daaf8b51d6f0aabc406f383103584cb3605b75c16a1f8c3adca53235b0713f2c60701a8f319dab71c7685cc49f63646defc40199ff4
+EBUILD ruby_parser-3.6.6.ebuild 1171 SHA256 35ba8fcb715d8085f45cd8365257294e7a7a87457ed0f42047504eeeda40d9f3 SHA512 86a61420ce53f4f7b86b3f8a3d41a3d9c0690d037a3a542abff7fde662f0b8d6aadbbf10a2f113ec3138e503a9b7bce21f762c817052827f3306d98eb77608bb WHIRLPOOL 34c6c59ca029562d36a35089c81db4c529f6e5d7b4fedb92dfa039e528493559883591c26e53b3d8b6c74c690322940ea3dc90911b4a54fff232e806eb7716ef
+MISC ChangeLog 9625 SHA256 d3a7005ff2e7fe30d4be188da5ae62a29ee7c3dc55b74a0a4c4a2480909b815e SHA512 3d743588e7f3ce59f02626388b3c59af480579fe201c80ea0d1d9743e129569fec5cd9c9b7aba4d60e8e580aff6d9c6085faabde9afc9d33ae909e4206a6134a WHIRLPOOL 747d9bd4b42b479fbc7f4cb12e642bff136e2c06f9bf56068ce0ee39c0bafb54fc4591f3b311b1e549a9e6b7e1117bae758cf95628ae0a9fbadd94cc524ce6b1
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlUvSjgACgkQiIP6VqMIqNfgZgD+JjClVptkXp2eJA2ZTW8LDA5I
+KnYR57Ow2vzfcRxMYs4A/2vbTvZxL2XRebSoBOvRdQj4MAuqt8t6+OicItzdYcgT
+=yc5c
+-----END PGP SIGNATURE-----
