@@ -1,0 +1,14 @@
+DEFINED_PHASES=compile configure install prepare setup test unpack
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby19] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby20] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby21] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby21] ) ruby_targets_ruby22? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby22] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( doc? ( >=dev-ruby/hoe-2.9.1[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( >=dev-ruby/hoe-2.9.1[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( >=dev-ruby/hoe-2.9.1[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( doc? ( >=dev-ruby/hoe-2.9.1[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/minitest-4.3[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/minitest-4.3[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/minitest-4.3[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( test? ( >=dev-ruby/minitest-4.3[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( doc? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( doc? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( doc? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( doc? ( dev-ruby/rake[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby22? ( test? ( dev-ruby/rake[ruby_targets_ruby22] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] ) )
+DESCRIPTION=A ruby parser written in pure ruby
+EAPI=5
+HOMEPAGE=https://github.com/seattlerb/ruby_parser
+IUSE=test elibc_FreeBSD ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 doc test test
+KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~amd64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=MIT
+RDEPEND=ruby_targets_ruby19? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby19] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby20] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby21] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby21] ) ruby_targets_ruby22? ( >=dev-ruby/sexp_processor-4.1:4[ruby_targets_ruby22] !<dev-ruby/ruby_parser-2.3.1-r1[ruby_targets_ruby22] ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby22? ( dev-lang/ruby:2.2 ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) ruby_targets_ruby22? ( virtual/rubygems[ruby_targets_ruby22] )
+REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 ruby_targets_ruby22 )
+SLOT=3
+SRC_URI=mirror://rubygems/ruby_parser-3.6.6.gem
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	2257adeaac9408ab545ef49ae751bae6	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=9fd723562aa1ee27c442b5a38453ffb9
